[MM-24968] Fixed add channel dropdown on mobile to pop out correctly (#5673)

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -236,7 +236,7 @@
         }
     }
 
-    .SidebarMenu {
+    .SidebarMenu, .AddChannelDropdown {
         display: block !important;
 
         .Menu {
@@ -245,7 +245,7 @@
     }
 
     .app__body {
-        .post, .SidebarMenu {
+        .post, .SidebarMenu, .AddChannelDropdown {
             .Menu {
                 @include border-radius(0);
                 border: 0px;
